--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@auth/prisma-adapter": "^2.5.0",
     "@prisma/client": "^5.19.1",
     "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-separator": "^1.1.0",
@@ -21,17 +23,22 @@
     "@syncfusion/ej2-react-image-editor": "^27.1.50",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns-tz": "^3.1.3",
     "emoji-picker-react": "^4.12.0",
     "lucide-react": "^0.445.0",
     "next": "14.2.13",
     "react": "^18",
+    "react-date-picker": "^11.0.0",
+    "react-datepicker": "^7.4.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-image-crop": "^11.0.7",
     "react-photo-editor": "^2.1.4",
     "social-media-platform": "file:",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
