--- a/package.json
+++ b/package.json
@@ -26,13 +26,19 @@
     "date-fns-tz": "^3.1.3",
     "emoji-picker-react": "^4.12.0",
     "lucide-react": "^0.445.0",
+    "mammoth": "^1.8.0",
+    "moment": "^2.30.1",
     "next": "14.2.13",
+    "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^4.6.82",
+    "quill": "^2.0.2",
     "react": "^18",
     "react-date-picker": "^11.0.0",
     "react-datepicker": "^7.4.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-image-crop": "^11.0.7",
+    "react-pdf": "^9.1.1",
     "react-photo-editor": "^2.1.4",
     "social-media-platform": "file:",
     "sonner": "^1.5.0",
@@ -49,6 +55,6 @@
     "postcss": "^8",
     "prisma": "^5.19.1",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.6.2"
   }
 }
