--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@syncfusion/ej2-react-image-editor": "^27.1.50",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns-tz": "^3.1.3",
@@ -40,6 +41,7 @@
     "react-image-crop": "^11.0.7",
     "react-pdf": "^9.1.1",
     "react-photo-editor": "^2.1.4",
+    "sharp": "^0.33.5",
     "social-media-platform": "file:",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
@@ -47,6 +49,7 @@
     "use-debounce": "^10.0.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
