--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@syncfusion/ej2-react-image-editor": "^27.1.50",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "croppie": "^2.6.5",
     "date-fns-tz": "^3.1.3",
     "emoji-picker-react": "^4.12.0",
     "lucide-react": "^0.445.0",
