--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.5.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.19.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -22,6 +23,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@syncfusion/ej2-react-image-editor": "^27.1.50",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -32,6 +34,7 @@
     "mammoth": "^1.8.0",
     "moment": "^2.30.1",
     "next": "14.2.13",
+    "next-auth": "^4.24.7",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^4.6.82",
     "quill": "^2.0.2",
@@ -39,6 +42,7 @@
     "react-date-picker": "^11.0.0",
     "react-datepicker": "^7.4.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-image-crop": "^11.0.7",
     "react-pdf": "^9.1.1",
@@ -53,6 +57,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.13",
+    "@types/next-auth": "^3.13.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
