login = google + fix db

--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://root:drowssap@localhost:5433/platform?schema=public"
+
+#GOOGLE_ID=782618364159-m6gdk63p699kb70n221qdcb83reet2de.apps.googleusercontent.com
+#GOOGLE_SECRET=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
