--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://root:drowssap@localhost:5433/platform?schema=public"
+NEXTAUTH_SECRET="NEXTAUTH_SECRET"
