--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -4,20 +4,23 @@ services:
   postgres:
     container_name: postgres
     image: postgres:16-alpine
+    # user: root
     environment:
       - POSTGRES_USER=root
       - POSTGRES_PASSWORD=drowssap
       - POSTGRES_DB=platform
-    # volumes:
-    #   - ./postgres_data:/var/lib/postgresql/data
+    volumes:
+      # - ./postgres_data:/var/lib/postgresql/data
+      - ./backups:/backups
     ports:
       - 5433:5432
     restart: always
     healthcheck:
-        test: ["CMD-SHELL", "pg_isready"]
-        interval: 1s
-        timeout: 5s
-        retries: 10
+      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 30s
 
   # pgadmin:
   #   container_name: pgadmin
