--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "clsx": "^2.1.1",
     "croppie": "^2.6.5",
     "date-fns-tz": "^3.1.3",
+    "embla-carousel-react": "^8.3.0",
     "emoji-picker-react": "^4.12.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.445.0",
     "mammoth": "^1.8.0",
     "moment": "^2.30.1",
@@ -57,6 +59,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.13",
+    "@types/lodash": "^4.17.12",
     "@types/next-auth": "^3.13.0",
     "@types/node": "^20",
     "@types/react": "^18",
