--- a/.env
+++ b/.env
@@ -1,6 +1,10 @@
-DATABASE_URL=postgresql://root:drowssap@localhost:5433/platform?schema=public
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
 
-NEXTAUTH_SECRET=OiKj/GzIV0Ho2BcPM8jnArSLP6x1EqLZgdvYl5/Yvmc=
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-GOOGLE_ID=
-GOOGLE_SECRET=
+DATABASE_URL="postgresql://root:drowssap@localhost:5433/platform?schema=public"
+NEXTAUTH_SECRET="NEXTAUTH_SECRET"
+
+
