--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "croppie": "^2.6.5",
@@ -36,6 +37,7 @@
     "moment": "^2.30.1",
     "next": "14.2.13",
     "next-auth": "4.24.8",
+    "nodemailer": "^6.9.15",
     "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
@@ -53,10 +55,12 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/croppie": "^2.6.4",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.12",
     "@types/node": "^20.16.15",
+    "@types/nodemailer": "^6.4.16",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "eslint": "^8.57.1",
@@ -67,6 +71,7 @@
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "prisma": "^5.21.1",
+    "raw-loader": "^4.0.2",
     "tailwindcss": "^3.4.14",
     "ts-jest": "^29.2.5",
     "typescript": "^5.6.3"
