--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "croppie": "^2.6.5",
     "date-fns-tz": "^3.2.0",
     "embla-carousel-react": "^8.3.0",
     "emoji-picker-react": "^4.12.0",
+    "ioredis": "^5.4.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.445.0",
     "moment": "^2.30.1",
@@ -46,6 +48,7 @@
     "react-icons": "^5.3.0",
     "react-image-crop": "^11.0.7",
     "react-photo-editor": "^2.1.4",
+    "react-router-dom": "^6.27.0",
     "sharp": "^0.33.5",
     "social-media-platform": "file:",
     "sonner": "^1.5.0",
@@ -59,7 +62,7 @@
     "@types/croppie": "^2.6.4",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.12",
-    "@types/node": "^20.16.15",
+    "@types/node": "^20.17.5",
     "@types/nodemailer": "^6.4.16",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
@@ -74,6 +77,7 @@
     "raw-loader": "^4.0.2",
     "tailwindcss": "^3.4.14",
     "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   },
   "overrides": {
