--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
+    "@huggingface/inference": "^2.8.1",
     "@prisma/client": "^5.21.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
@@ -33,6 +34,7 @@
     "date-fns-tz": "^3.2.0",
     "embla-carousel-react": "^8.3.0",
     "emoji-picker-react": "^4.12.0",
+    "framer-motion": "^11.11.11",
     "ioredis": "^5.4.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.445.0",
@@ -40,6 +42,9 @@
     "next": "14.2.13",
     "next-auth": "4.24.8",
     "nodemailer": "^6.9.15",
+    "openai": "^4.71.1",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
