--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "test": "jest --passWithNoTests"
+    "start": "next start"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
@@ -70,7 +68,7 @@
     "@types/croppie": "^2.6.4",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.12",
-    "@types/node": "^20.17.5",
+    "@types/node": "^20.17.7",
     "@types/nodemailer": "^6.4.16",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
@@ -86,7 +84,7 @@
     "tailwindcss": "^3.4.14",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.7.2"
   },
   "overrides": {
     "cookie": "^0.7.1"
