--- a/package.json
+++ b/package.json
@@ -7,12 +7,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-<<<<<<< HEAD
-    "lint": "next lint"
-=======
-    "postinstall": "prisma generate"
->>>>>>> 3b6663fd7ddde4cdaec7a4a3bc8e4276b94f771f
+    "start": "next start"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
@@ -24,6 +19,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
@@ -36,6 +32,7 @@
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "croppie": "^2.6.5",
+    "date-fns": "^3.6.0",
     "date-fns-tz": "^3.2.0",
     "embla-carousel-react": "^8.3.0",
     "emoji-picker-react": "^4.12.0",
@@ -53,7 +50,9 @@
     "pusher-js": "^8.4.0-rc2",
     "quill": "^2.0.2",
     "react": "^18.3.1",
+    "react-date-picker": "^11.0.0",
     "react-datepicker": "^7.5.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
@@ -65,6 +64,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "timescape": "^0.7.0",
     "use-debounce": "^10.0.4"
   },
   "devDependencies": {
