--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "emoji-picker-react": "^4.12.0",
     "framer-motion": "^11.11.11",
     "ioredis": "^5.4.1",
+    "js-cookie": "^3.0.5",
     "link-preview-js": "^3.0.12",
     "lodash": "^4.17.21",
     "lucide-react": "^0.445.0",
@@ -75,6 +76,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/croppie": "^2.6.4",
     "@types/jest": "^29.5.14",
+    "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.17.12",
     "@types/node": "^20.17.7",
     "@types/nodemailer": "^6.4.16",
